frontend/tests/cases/negative/instanceOverlapPair.gr
interface Simple a

instance Simple (Int, Int)

-- (Int, a) overlaps with (Int, Int)
instance Simple (Int, a)
